--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ol>
+		<li data-ns-test="shoppingList">Shoes</li>
+		<li data-ns-test="shoppingList">Bag</li>
+		<li data-ns-test="shoppingList">Dress</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Goa</li>
+		<li data-ns-test="holidayList">Ooty</li>
+		<li data-ns-test="holidayList">Kodaikanal</li>
+		
+	</ul>
 
 </body>
 
